<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAccountFragment">

    <TextView
        android:id="@+id/textView_newAccountFragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bigDistance"
        android:text="@string/newAccount"
        android:textSize="@dimen/textHeaderOne"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText_newAccountFragment_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distanceOne"
        android:layout_marginEnd="@dimen/distanceOne"
        android:layout_marginTop="@dimen/distanceOne"
        app:layout_constraintStart_toStartOf="@id/textView_newAccountFragment_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_newAccountFragment_createCount"
        android:hint="@string/inputEmail"
        android:textColorHint="@color/material_dynamic_neutral70"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintVertical_chainStyle="packed"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_newAccountFragment_createCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distanceOne"
        android:layout_marginEnd="@dimen/distanceOne"
        android:layout_marginTop="@dimen/distanceThree"
        android:backgroundTint="@color/orange"
        android:text="@string/createCount"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_newAccountFragment_email" />



</androidx.constraintlayout.widget.ConstraintLayout>